# ml-sigmoid-attention

./: .gitmodules  LICENSE  MANIFEST.in  README.md  setup.bash  setup.py
attention_simulator/: README.md  pyproject.toml
attention_simulator/examples/language_modeling/: train_autoregressive_language_model.py
attention_simulator/examples/language_modeling/configs/: experiment_realnews_transformer_bf16_flash_sigmoid_multilayer_rope.yaml  experiment_realnews_transformer_bf16_flash_softmax_multilayer_rope.yaml  experiment_realnews_transformer_sigmoid_alibi.yaml  experiment_tiny_shakespeare_transformer_sigmoid_rope.yaml  experiment_tiny_shakespeare_transformer_softmax_sincos.yaml
attention_simulator/src/attention_simulator/: autoregressive_language_model.py
attention_simulator/src/attention_simulator/helpers/: grapher.py  params.py  utils.py
attention_simulator/src/attention_simulator/layers/: activations.py  attention.py  container.py  flash_sigmoid_attention.py  flash_softmax_attention.py  initialization.py  linear.py  masking.py  mlp.py  normalization.py  position_embedding.py  transformer.py
csrc/flash_sigmoid/: flash_api.cpp
csrc/flash_sigmoid/src/: flash_bwd_launch_template.h  flash_fwd_kernel.h  softmax.h  (+1 more)
flash_sigmoid/: README.md  __init__.py  flash_attn_interface.py
flash_sigmoid/tests/: test_flash_attn.py
optorch/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
optorch/src/optorch/: __init__.py  adam.py  amp.py  builder.py  common.py  lars.py  schedule.py  sgd.py
optorch/src/tests/: test_adam.py  test_lars.py  test_sgd.py
(+5 files in other folders)
